tests/ui/anyiter_paren.stderr
error: Expected <..> generic parameter.
 --> tests/ui/anyiter_paren.rs:4:23
  |
4 | pub fn any_str_len(s: AnyIter(AnyString)) -> usize {
  |                       ^^^^^^^^^^^^^^^^^^
